# lyphe

./: .gitignore  CMakeLists.txt  config.yaml
include/: DNA.h  Food.h  FoodHandler.h  Organism.h  OrganismHandler.h  RandomEngine.h  RateController.hpp  RenderEngine.h  Renderable.hpp  Vec3.hpp
src/: DNA.cpp  Food.cpp  FoodHandler.cpp  Organism.cpp  OrganismHandler.cpp  RandomEngine.cpp  RenderEngine.cpp  main.cpp
